--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^9.8.4",
+    "firebase": "^9.9.0",
     "next": "12.1.6",
+    "next-auth": "^4.10.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
